# imperia

./: build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  build_apk.yml  fetch_winlator_core.yml  physical-import.yml  wipe.yml
app/: build.gradle  proguard-rules.pro
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt
app/app/src/main/java/com/winlator/: KeepAliveService.kt  NFSDownloader.kt  SplashActivity.kt  XServerDisplayActivity.java
app/app/src/main/java/com/winlator/container/: ContainerManager.java
app/app/src/main/java/com/winlator/core/: FileUtils.java  TarCompressorUtils.java  WineUtils.java
app/app/src/main/java/com/winlator/xenvironment/: RootFSInstaller.java
app/app/src/main/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nfsu2_container.wcp
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/imperia/emulator/: DirectLauncher.kt  MainActivity.kt  NFSDownloader.kt  NFSLauncherActivity.kt
app/src/main/java/com/retroemulator/launcher/: ConfigManager.kt  DirectLauncher.kt  GameShortcutCreator.kt
app/src/main/java/com/winlator/: KeepAliveService.kt  WineActivity.kt  WineService.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
games/template/: game_config.json
scripts/: build_all_apks.sh  pack_game.sh
